[project]
name = "crewai-researcher-agent"
version = "0.1.0"
description = "An agent that researcher a given topic"
requires-python = ">=3.12"
dependencies = [
    "autoa2a>=0.0.3",
    "crewai>=0.95.0",
    "crewai-tools>=0.33.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
serve_a2a = "run_a2a:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [ "./run_a2a.py" ]
exclude = [ "__pycache__", "*.pyc" ]
packages = [ "." ]